# tui-daemon

./: .gitignore  Cargo.toml  build.rs
.centy/: .centy-manifest.json  organization.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
proto/: daemon.proto
src/: app.rs  events.rs  main.rs
src/grpc/: client.rs  mod.rs
src/ui/: dashboard.rs  mod.rs
